--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ footer {
     <ul>
       <li><a href="#">London</a></li>
       <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="#">Fortnite</a></li>
     </ul>
   </nav>
   
